# final-project-thesis

./: .gitignore  LICENSE  README.md  pyproject.toml
code/data_processing/: build_fallacies_dataset.py  file_cleaning.py  generate_call2_dataset.py  random_sampler.py  task2_distributions.py  task4_accuracy.py
code/data_processing/scripts/: generate_call2_dataset.py  random_sampler.py  schemas.py  validator.py
code/data_processing/scripts/utils/: constants.py
code/data_processing/test-logs/: filtered_run_ids.json
misc/: README.md  dataset_aggregations_pooling_system.py  extract_edge_list_dict.py  extract_edge_list_wide.py
notebooks/: file_cleaning.py  ml_data_exploration.py  ml_dataset_creation.py  ml_models.py  ml_models_explorer.py  task2_distributions.py  task4_accuracy.py
scripts/: README.md  train_models.py
src/mathanx/: __init__.py  constants.py  schemas.py  validator.py
src/mathanx/ml/: __init__.py  config.py  helpers.py
