[project]
name = "mathanx"
version = "0.1.0"
description = "Exploring math anxiety in LLMs."
readme = "README.md"
authors = [
    { name = "anthony-tricarico", email = "tricarico672@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "emoatlas @ git+https://github.com/MassimoStel/emoatlas.git",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "scikit-learn>=1.8.0",
    "xgboost>=2.1.0",
    "shap>=0.46.0",
    "marimo>=0.23.6",
]

[project.scripts]
mathanx = "mathanx:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
